syntax = "proto3";

option optimize_for = SPEED; //加快解析

option java_package = "com.pcitc.nio.netty.protobuf2";

option java_outer_classname = "MyDataInfo";


message MyMessage {
    //定义一个枚举类型
    enum DataType {
        StudentType = 0; //proto3 要求enum编号从0开始
        WorkerType = 1;
    }

    //data_type用来标识是哪一个枚举类型
    DataType date_type = 1;

    //表示每次枚举类型最多只能出现其中一个，节省空间
    oneof dataBody {
        Student student = 2;
        Worker worker = 3;
    }

}


message Student {
    int32 ind = 1;
    string name = 2;
}

message Worker {
    string name = 1;
    float salary = 2;
}